Login bug and Model ML integration bug fixed

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -32,6 +32,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
+            android:id="@+id/tvResult"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
