--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/navigation_home">
 
     <fragment
         android:id="@+id/navigation_home"
@@ -21,5 +21,15 @@
         android:id="@+id/navigation_profile"
         android:name="com.zulfadar.bisindgo.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_navigation_profile_to_user_account_edit_profile"
+            app:destination="@id/user_account_edit_profile" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/user_account_edit_profile"
+        android:name="com.zulfadar.bisindgo.ui.edituserprofile.FragmentEditUserProfile"
+        android:label="edit profile"
+        tools:layout="@layout/fragment_edit_user_profile2" />
 </navigation>
