--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,22 @@
         app:layout_constraintRight_toRightOf="parent"
         />
 
-    <Button
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="180dp"
+        android:layout_marginBottom="20dp"
+        android:textSize="15dp"
+        android:textColor="@color/blue"
+        android:text="@string/forgot_password"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edt_password_login"
+        />
+
+    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
         android:id="@+id/login_btn"
         android:layout_width="300dp"
         android:layout_height="55dp"
@@ -77,7 +92,7 @@
         android:textStyle="bold"
         android:textColor="@color/white"
         android:backgroundTint="@color/blue"
-        app:layout_constraintTop_toBottomOf="@+id/edt_password_login"
+        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
