--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="blue3">#5767FA</color>
     <color name="black">#000000</color>
     <color name="grey">#F1F1F1</color>
+    <color name="red">#FF0000</color>
 </resources>
